# go-ordering/router/router.go
@@ -4,6 +4,7 @@ package router
 import (
 	ctl "WBABEProject-20/go-ordering/controller"
 	logger "WBABEProject-20/go-ordering/logger"
+	"fmt"
 
 	"github.com/gin-gonic/gin"
 	swgFiles "github.com/swaggo/files"
@@ -26,10 +27,8 @@ func NewRouter(ctl *ctl.Controller) (*Router, error) {
 // cross domain을 위해 사용
 func CORS() gin.HandlerFunc {
 	return func(c *gin.Context) {
-		logger.Info("router.CORS c : ", c)
-
-		//~ 생략
-		c.Writer.Header().Set("Access-Control-Allow-Origin", "*")
+		fmt.Println("router.CORS c : ", c)
+		c.Writer.Header().Set("Access-Control-Allow-Origin", "*") //http://localhost:8080
 		c.Writer.Header().Set("Access-Control-Allow-Credentials", "true")
 		//허용할 header 타입에 대해 열거
 		c.Writer.Header().Set("Access-Control-Allow-Headers", "Content-Type, Content-Length, Accept-Encoding, X-CSRF-Token, X-Forwarded-For, Authorization, accept, origin, Cache-Control, X-Requested-With")
@@ -46,8 +45,7 @@ func CORS() gin.HandlerFunc {
 // 임의 인증을 위한 함수
 func liteAuth() gin.HandlerFunc {
 	return func(c *gin.Context) {
-		logger.Info("router.liteAuth c : ", c)
-		//~ 생략
+		fmt.Println("router.liteAuth c : ", c)
 		if c == nil {
 			c.Abort() // 미들웨어에서 사용, 이후 요청 중지
 			return
@@ -55,7 +53,7 @@ func liteAuth() gin.HandlerFunc {
 		//http 헤더내 "Authorization" 폼의 데이터를 조회
 		auth := c.GetHeader("Authorization")
 		//실제 인증기능이 올수있다. 단순히 출력기능만 처리 현재는 출력예시
-		logger.Info("Authorization-word ", auth)
+		fmt.Println("Authorization-word ", auth)
 
 		c.Next()
 	}
@@ -65,10 +63,10 @@ func liteAuth() gin.HandlerFunc {
 func (p *Router) Idx() *gin.Engine {
 
 	// 컨피그나 상황에 맞게 gin 모드 설정
-	gin.SetMode(gin.ReleaseMode)
-	// gin.SetMode(gin.DebugMode)
+	//gin.SetMode(gin.ReleaseMode)
 
-	r := gin.Default() //gin 선언
+	//r := gin.Default() //gin 선언
+	r := gin.Default()
 
 	// 기존의 logger, recovery 대신 logger에서 선언한 미들웨어 사용
 	//r.Use(gin.Logger())   //gin 내부 log, logger 미들웨어 사용 선언
@@ -78,10 +76,13 @@ func (p *Router) Idx() *gin.Engine {
 
 	r.Use(CORS()) //crossdomain 미들웨어 사용 등록
 
-	logger.Info("start server")
+	logger.Info("[router Idx] start server...")
 
 	r.GET("/swagger/:any", ginSwg.WrapHandler(swgFiles.Handler))
-	docs.SwaggerInfo.Host = "localhost" //swagger 정보 등록
+	//r.POST("/swagger/:any", ginSwg.WrapHandler(swgFiles.Handler))
+	//r.PUT("/swagger/:any", ginSwg.WrapHandler(swgFiles.Handler))
+
+	docs.SwaggerInfo.Host = "localhost:8080" //swagger 정보 등록
 
 	//피주문자 그룹
 	seller := r.Group("oos/seller", liteAuth())
@@ -89,14 +90,10 @@ func (p *Router) Idx() *gin.Engine {
 		seller.POST("/createMenu", p.ct.CreateMenu)
 		seller.POST("/updateMenu", p.ct.UpdateMenu)
 		seller.PUT("/deleteMenu", p.ct.DeleteMenu)
+		seller.GET("/searchMenu", p.ct.SearchMenu)
 
-		seller.POST("/searchMenu", p.ct.SearchMenu)
-		seller.POST("/orderStates", p.ct.OrderStatus)
-
-		seller.POST("/viewMenu", p.ct.ViewMenu)
-
-		seller.POST("/setTodayMenu", p.ct.SetTodayMenu)
-		seller.POST("/searchTodayMenu", p.ct.SearchTodayMenu)
+		seller.GET("/orderStatus", p.ct.OrderStatus)
+		seller.PUT("/setTodayMenu", p.ct.SetTodayMenu)
 
 	}
 
@@ -104,14 +101,15 @@ func (p *Router) Idx() *gin.Engine {
 	order := r.Group("oos/order", liteAuth())
 	{
 
-		order.POST("/searchMenu", p.ct.SearchMenu)
-		order.POST("/viewMenu", p.ct.ViewMenu)
+		order.GET("/viewMenu", p.ct.ViewMenu)
 
 		order.POST("/newOrder", p.ct.NewOrder)
-		order.POST("/changeOrder", p.ct.ChangeOrder)
-		order.POST("/searchOrder", p.ct.SearchOrder)
+		order.PUT("/changeOrder", p.ct.ChangeOrder)
+		order.GET("/searchOrder", p.ct.SearchOrder)
+		order.GET("/viewOrder", p.ct.ViewOrder)
 
 		order.POST("/createReview", p.ct.CreateReview)
+		order.GET("/searchTodayMenu", p.ct.SearchTodayMenu)
 
 	}
 
